# cesar-school-repo

./: .gitignore  LICENSE  README.md
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/: CMakeLists.txt
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/: NOTICE
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/ci-scripts/: Dockerfile.ctest  Jenkinsfile  Jenkinsfile-FlexRIC-RAN  doGitLabMerge.sh  flexric-ran-report.html  generateFlexricRanReport.py  generateHtmlReport.py  run-flexric-ran-locally.sh
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/ci-scripts/oai-cn5g-resources/conf/: config.yaml
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/docker/: docker-compose.yaml
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/examples/emulator/agent/: CMakeLists.txt  read_setup_ran.h  sm_gtp.c  sm_kpm.c  sm_mac.c  sm_mac.h  sm_pdcp.c  sm_pdcp.h  sm_rlc.h  sm_slice.c  test_agent.c
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/examples/ric/: CMakeLists.txt  near_ric.c
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/examples/xApp/python3/: xapp_slice_moni_ctrl.py
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/grafana/datasources/: datasource.yml
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/multiRAT/: README.md
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/openshift/: build-config.yaml
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/: CMakeLists.txt
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/agent/: CMakeLists.txt  asio_agent.c  e2_agent.c  endpoint_agent.c  endpoint_agent.h  msg_handler_agent.h  not_handler_agent.h
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/lib/: aind_event.h  ind_event.c  ind_event.h  pending_events.h  sig_handler.c  sig_handler.h
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/lib/3gpp/: CMakeLists.txt
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/lib/e2ap/: CMakeLists.txt  README.md  e2_node_connected_wrapper.h  e2_node_connected_xapp_wrapper.h  e2_setup_failure_wrapper.h  e2_setup_request_wrapper.h  e2ap_ap_wrapper.h  e2ap_global_node_id_wrapper.h  e2ap_msg_dec_generic_wrapper.h  e2ap_msg_free_wrapper.h  e2ap_node_comp_interface_type_wrapper.h  e2ap_node_component_config_add_wrapper.h  e2ap_plmn_wrapper.h  e42_ric_subscription_request_wrapper.h  global_consts_wrapper.h  ric_control_failure_wrapper.h  ric_inidication_wrapper.h  ric_subscription_delete_failure_wrapper.h  ric_subscription_delete_response_wrapper.h  ric_subscription_request_wrapper.h  ric_subscription_response_wrapper.h  type_defs_wrapper.h
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/lib/ep/: e2ap_ep.h
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/lib/msg_hand/: CMakeLists.txt
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/ric/: act_req.h  asio_ric.c  asio_ric.h  e2ap_ric.c  e2ap_ric.h  endpoint_ric.h  generate_setup_failure.c  generate_setup_response.h  map_e2_node_sockaddr.h  near_ric.c  near_ric_api.c  near_ric_api.h  not_handler_ric.c  not_handler_ric.h  plugin_ric.c
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/ric/iApp/: e2_node_ric_id.c  e42_iapp.c  e42_iapp_api.c  e42_iapp_api.h  endpoint_iapp.c  ind_event.h  map_ric_id.c  map_ric_id.h  map_xapps_sockaddr.h  xapp_ric_id.c  xapp_ric_id.h
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/ric/iApps/: influx.h  redis.h  stdout.c  stdout.h
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/sm/: CMakeLists.txt  sm_agent.h  sm_ric.h
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/sm/gtp_sm/: CMakeLists.txt  gtp_sm_agent.c  gtp_sm_id.h  gtp_sm_ric.c
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/sm/kpm_sm/: README.md  kpm_data_ie_wrapper.h
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/sm/mac_sm/: mac_sm_ric.c
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/sm/pdcp_sm/: CMakeLists.txt  pdcp_sm_agent.c  pdcp_sm_agent.h
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/sm/rc_sm/: README.md  rc_sm_agent.c  rc_sm_ric.h
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/sm/rlc_sm/: CMakeLists.txt  rlc_sm_agent.c  rlc_sm_agent.h  rlc_sm_id.h  rlc_sm_ric.h
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/sm/slice_sm/: CMakeLists.txt  slice_sm_agent.c  slice_sm_agent.h  slice_sm_id.h  slice_sm_ric.c
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/sm/tc_sm/: CMakeLists.txt  tc_sm_id.h  tc_sm_ric.c
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/util/: byte_array.c  byte_array.h  conf_file.h  conversions.c  e.h  time_now_us.c
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/util/alg_ds/: README.md
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/xApp/: async_event_xapp.h  e2_node_connected_xapp.c  e2ap_xapp.c  e2ap_xapp.h  e42_xapp_api.c  plugin_agent.c  plugin_ric.c  plugin_ric.h  sm_ran_function.c  sm_ran_function.h  sm_ran_function_def.c
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/src/xApp/swig/: CMakeLists.txt  swig_wrapper.cpp  swig_wrapper.h
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/test/: changes.patch
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/test/agent-ric/: CMakeLists.txt
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/test/encode_decode/e2ap/: CMakeLists.txt
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/test/rnd/: fill_rnd_data_e2_setup_req.c  fill_rnd_data_e2_setup_req.h  fill_rnd_data_gtp.c  fill_rnd_data_kpm.c  fill_rnd_data_mac.h  fill_rnd_data_pdcp.c  fill_rnd_data_tc.h
ric/code/oai-cn-gnb-e2/openairinterface5g/openair2/E2AP/flexric/test/sm/: CMakeLists.txt
(+1569 files in other folders)
